Fixed bug #36908 (wsdl default value overrides value in soap request).